--- a/src/App.css
+++ b/src/App.css
@@ -80,7 +80,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 50vh;
+    height: 400px;
     overflow-y: scroll;
 }
 @media screen and (min-width:540px) {
@@ -102,6 +102,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    flex-grow: 1;
 }
 .searcbar-container{
     display: flex;
